# cryptography-course

./: .gitignore  README.md  cipher_breaker_script.py  requirements.txt  substitution_breaker_script.py
assets/: train_text.txt  tri_grams_fq.csv
lab_1_simple/: xor_cipher_breaker_script.py
lab_1_substitution/: config.py  frequency_analisis.py  generic_algo.py  kasiski_examinator.py  pre_processing_data.py  solved.txt  substitution_breaker_script.py  utils.py
lab_2/: salsa20_breaker.ts  salsa_plain_breaker_script.py  solved.txt
lab_3_1/: Cargo.toml  README.md  get_million.js
lab_3_1-2/: seq.txt
lab_3_1/src/: main.rs
lab_3_2/: README.md  get_million.js  package-lock.json  package.json
lab_3_3/: README.md  get_million.js
lab_4/: Cargo.toml  README.md  passwords_without_salt10.csv
lab_4/part2/tester/: Cargo.toml
lab_4/part2/tester/src/: main.rs
lab_4/src/: config.rs  formatter.rs  generator.rs  hasher.rs  main.rs
lab_4_2/: Cargo.toml  README.md
lab_4_2/src/: main.rs
lab_5/: README.md
lab_6/: README.md
lab_7/: README.md  nginx.conf
lab_8/: final0_breaker.py  solution.md
salsa20/: bigram.txt  salsa_breaker_v_2_script.py  salsa_plain_breaker_script.py  trigram.txt
shared_code/: __init__.py  utils.py  xor_utils.py
simple_xor_cipher/: xor_cipher_breaker_script.py
substitution_breaker/: config.py  fitness.py  fitness_helpers.py  generic_algo.py  pre_processing_data.py  solved.txt  substitution_breaker_script.py  utils.py
substitution_task/: generic_algo.py  pre_processing_data.py  solved.txt  substitution_breaker_script.py
(+52 files in other folders)
